--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <ul id="task-list"></ul>
   </main>
 
-  <script src="dist/script.js"></script>
+  <script type="module" src="dist/script.js" defer></script>
 </body>
 </html>
